# touchHLE-trunk-builds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
deployment/: deployment.yaml  ingress.yaml  secrets.sealed.yaml  service.yaml
src/: builds.rs  config.rs  init_tracing.rs  main.rs
