[package]
name = "touchHLE-trunk-builds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
octocrab = { version = "0.40.0", features = ["stream"] }
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
camino = "1.1.9"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
secrecy = "0.10.2"
futures-util = "0.3.30"
regex = "1.10.6"
log = "0.4.22"
http = "1.1.0"
http-body-util = "0.1.2"
futures-core = "0.3.30"
bytes = "1.7.2"
axum-tracing-opentelemetry = "0.21.1"
tower-http = { version = "0.6.1", features = ["catch-panic"] }
chrono = "0.4.38"

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'
